RESOLVED FIXED83945
Compositing layers not updated after scroll in WebKit1
https://bugs.webkit.org/show_bug.cgi?id=83945
Summary Compositing layers not updated after scroll in WebKit1
Simon Fraser (smfr)
Reported 2012-04-13 14:20:27 PDT
Several compositing pixel tests fail because compositing layers are not correctly updated after scrolling.
Attachments
Patch (4.90 KB, patch)
2012-04-13 14:59 PDT, Simon Fraser (smfr)
jamesr: review+
Simon Fraser (smfr)
Comment 1 2012-04-13 14:59:15 PDT
James Robinson
Comment 2 2012-04-13 15:24:42 PDT
Comment on attachment 137156 [details] Patch R=me (mostly a rubber stamp, since I'm not that familiar with any ports that use the PlatformWidget path)
Simon Fraser (smfr)
Comment 3 2012-04-13 15:27:07 PDT
Note You need to log in before you can comment on or make changes to this bug.