Compositing layers not updated after scroll in WebKit1 https://bugs.webkit.org/show_bug.cgi?id=83945

Source/WebCore:

Reviewed by James Robinson.

Fix the WebKit1 code path to correctly update compositing layers
after a scroll, by calling updateFixedElementsAfterScrolling() from
scrollPositionChangedViaPlatformWidget().

Covered by existing tests.

* page/FrameView.cpp:
(WebCore::FrameView::scrollPositionChangedViaPlatformWidget):

LayoutTests:

Reviewed by James Robinson.

Replace an incorrect Mac baseline with the correct result which was
already in place for WebKit2.

Remove a passing test from test-expectations.

* compositing/geometry/limit-layer-bounds-fixed-positioned-expected.txt:
* platform/mac-wk2/compositing/geometry/limit-layer-bounds-fixed-positioned-expected.txt: Removed.
* platform/mac/test_expectations.txt:

git-svn-id: svn://svn.chromium.org/blink/trunk@114175 bbb929c8-8fbe-4397-9dbb-9b2b20218538