third_party/WebKit/Source/WebCore/page/FrameView.cpp
@@ -1719,6 +1719,7 @@ void FrameView::setFixedVisibleContentRect(const IntRect& visibleContentRect)
 void FrameView::scrollPositionChangedViaPlatformWidget()
 {
     repaintFixedElementsAfterScrolling();
+    updateFixedElementsAfterScrolling();
     scrollPositionChanged();
 }
 
